--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "express": "^4.17.1",
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.12",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "axios": "^0.21.1",
     "heroku-keep-awake": "^1.1.2"
   },
   "scripts": {
