--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.12",
     "request": "^2.88.2",
-    "axios": "^0.21.1"
-  },
-  "devDependencies": {
+    "axios": "^0.21.1",
     "heroku-keep-awake": "^1.1.2"
   },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
