--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "axios": "^0.21.1",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
     "heroku-keep-awake": "^1.1.2",
     "node-schedule": "^2.0.0",
