--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "express": "^4.17.1",
     "heroku-keep-awake": "^1.1.2",
     "node-schedule": "^2.0.0",
-    "nodemon": "^2.0.12",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {},
   "scripts": {
